# velvet

./: CMakeLists.txt  LICENSE  Makefile  README.md
examples/: ButtonEg.cpp  demo.cpp
include/velvet/: core
include/velvet/base/: Widget.hpp  Window.hpp
include/velvet/widgets/: Button.hpp  HStack.hpp  Image.hpp  Label.hpp  Stack.hpp  VStack.hpp
src/: main.cpp  placeholder.cpp
src/base/: Widget.cpp
src/widgets/: Button.cpp  HStack.cpp  Image.cpp  Label.cpp  Slider.cpp  VStack.cpp  Widget.cpp
